test/core/errors/rules_error/zs/id_invalid_expression_type_error.zs
package id_invalid_expression_type_error;

rule_group RuleGroup
{
    rule 10; // must be a string constant!
};
